--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -21,3 +21,15 @@ other = "Francés"
 
 [facebookLocaleCode]
 other = "es_ES"
+
+[subscribeNewsletter]
+other = "Recibe nuestras últimas actualizaciones"
+
+[emailHelp]
+other = "Introduce tu correo en este campo"
+
+[subscribeText]
+other = "Si quieres estar al tanto de nuestros últimos artículos, escribe tu correo. No lo usaremos para otra cosa, ni lo compartiremos con terceros."
+
+[register]
+other = "Suscribirme"
