--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -25,8 +25,17 @@ other = "en_US"
 [subscribeNewsletter]
 other = "Receive our last news"
 
+[email]
+other = "Email"
+
+[name]
+other = "Name"
+
 [emailHelp]
 other = "Fill your email in this field"
+
+[nameHelp]
+other = "Fill your name in this field"
 
 [subscribeText]
 other = "If you want to know when we publish a new post, fill your email below. We won't use it for anything else and won't share it with third parties."
