--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -41,7 +41,7 @@ other = "Fill your email in this field"
 other = "Fill your name in this field"
 
 [subscribeText]
-other = "If you want to know when we publish a new post, fill your email below. We won't use it for anything else and won't share it with third parties."
+other = "If you want to know when we publish a new post, fill your email below. We won't use it for anything else or share it with third parties."
 
 [register]
 other = "Register"
