--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -10,18 +10,6 @@ other = "Home"
 [inOtherLanguages]
 other = "In other languages"
 
-[en]
-other = "English"
-
-[es]
-other = "Spanish"
-
-[fr]
-other = "French"
-
-[facebookLocaleCode]
-other = "en_US"
-
 [subscribeNewsletter]
 other = "Receive our last news"
 
@@ -45,3 +33,24 @@ other = "If you want to know when we publish a new post, fill your email below. 
 
 [register]
 other = "Register"
+
+[en]
+other = "English"
+
+[es]
+other = "Spanish"
+
+[fr]
+other = "French"
+
+[frLocaleCode]
+other = "fr_FR"
+
+[enLocaleCode]
+other = "en_US"
+
+[esLocaleCode]
+other = "es_ES"
+
+[facebookLocaleCode]
+other = "en_US"
