--- a/i18n/fr.toml
+++ b/i18n/fr.toml
@@ -10,18 +10,6 @@ other = "Accueil"
 [inOtherLanguages]
 other = "Dans d'autres langues"
 
-[en]
-other = "Anglais"
-
-[es]
-other = "Espagnol"
-
-[fr]
-other = "Français"
-
-[facebookLocaleCode]
-other = "fr_FR"
-
 [subscribeNewsletter]
 other = "Reçois nos dernières actus"
 
@@ -45,3 +33,24 @@ other = "Si tu veux être au courant de nos derniers article, inscris toi. Nous 
 
 [register]
 other = "M'enregistrer"
+
+[en]
+other = "Anglais"
+
+[es]
+other = "Espagnol"
+
+[fr]
+other = "Français"
+
+[frLocaleCode]
+other = "fr_FR"
+
+[enLocaleCode]
+other = "en_US"
+
+[esLocaleCode]
+other = "es_ES"
+
+[facebookLocaleCode]
+other = "fr_FR"
