Add meta description property for homepage.

--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -1,3 +1,6 @@
+[homePageDescription]
+other = "Nuestro blog de viaje por el mundo. ¡Anécdotas, fotos, consejos y reflexiones de viaje para darte ganas de lanzarte a la aventura tu también!"
+
 [tableOfContents]
 other = "Tabla de contenido"
 
