--- a/i18n/fr.toml
+++ b/i18n/fr.toml
@@ -1,3 +1,6 @@
+[homePageDescription]
+other = "Voici notre blog de voyage a travers le monde. Anecdotes, photos, conseils et réflexions de voyages pour vous donner l'envie de partir à l'aventure vous aussi !"
+
 [tableOfContents]
 other = "Table des matières"
 
