--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -1,5 +1,5 @@
 [homePageDescription]
-other = "Nuestro blog de viaje por el mundo. ¡Anécdotas, fotos, consejos y reflexiones de viaje para darte ganas de lanzarte a la aventura tu también!"
+other = "Nuestro blog de viaje en mochila por el mundo. ¡Anécdotas, fotos, consejos y reflexiones de viaje para darte ganas de lanzarte a la aventura tu también!"
 
 [tableOfContents]
 other = "Tabla de contenido"
