--- a/i18n/fr.toml
+++ b/i18n/fr.toml
@@ -1,5 +1,5 @@
 [homePageDescription]
-other = "Voici notre blog de voyage à travers le monde. Anecdotes, photos, conseils et réflexions de voyages pour vous donner l'envie de partir à l'aventure vous aussi !"
+other = "Voici notre blog de voyage en sac à dos à travers le monde. Anecdotes, photos, conseils et réflexions de voyages pour vous donner l'envie de partir à l'aventure vous aussi !"
 
 [tableOfContents]
 other = "Table des matières"
