Add menu on left side (pending to finish links)

--- a/i18n/es.toml
+++ b/i18n/es.toml
@@ -7,6 +7,9 @@ other = "Tabla de contenido"
 [latestPosts]
 other = "Últimos articulos"
 
+[categories]
+other = "Categorias"
+
 [home]
 other = "Inicio"
 
